--- a/food.html
+++ b/food.html
@@ -18,52 +18,52 @@
 				<a href="">网站首页</a>
 			</li>
 			<li>
-				<a href="">品牌溯源</a>
+				<a href="brand.html">品牌溯源</a>
 			</li>
 			<li>
-				<a href="">金典美食</a>
+				<a href="food.html">金典美食</a>
 				<ul class="nitem">
-					<li><a href="">凉皮系列</a></li>
-					<li><a href="">面食系列</a></li>
-					<li><a href="">肉夹馍系列</a></li>
-					<li><a href="">米饭系列</a></li>
-					<li><a href="">凉菜系列</a></li>
+					<li><a href="food.html">凉皮系列</a></li>
+					<li><a href="food.html">面食系列</a></li>
+					<li><a href="food.html">肉夹馍系列</a></li>
+					<li><a href="food.html">米饭系列</a></li>
+					<li><a href="food.html">凉菜系列</a></li>
 				</ul>
 			</li>
 			<li>
-				<a href="">门店风采</a>
+				<a href="store.html">门店风采</a>
 			</li>
 			<li>
-				<a href="">移动电车</a>
+				<a href="car.html">移动电车</a>
 				<ul class="nitem">
-					<li><a href="">店车优势</a></li>
-					<li><a href="">经济效益</a></li>
+					<li><a href="car.html">店车优势</a></li>
+					<li><a href="car.html">经济效益</a></li>
 				</ul>
 			</li>
 			<li>
-				<a href="">加盟咨询</a>
+				<a href="join.html">加盟咨询</a>
 				<ul class="nitem">
-					<li><a href="">加盟须知</a></li>
-					<li><a href="">加盟政策</a></li>
-					<li><a href="">经济效益</a></li>
+					<li><a href="join.html">加盟须知</a></li>
+					<li><a href="join.html">加盟政策</a></li>
+					<li><a href="join.html">经济效益</a></li>
 				</ul>
 			</li>
 			<li>
-				<a href="">服务支持</a>
+				<a href="service.html">服务支持</a>
 				<ul class="nitem">
-					<li><a href="">开店服务</a></li>
-					<li><a href="">全程支持</a></li>
+					<li><a href="service.html">开店服务</a></li>
+					<li><a href="service.html">全程支持</a></li>
 				</ul>
 			</li>
 			<li>
-				<a href="">资讯中心</a>
+				<a href="information.html">资讯中心</a>
 				<ul class="nitem">
-					<li><a href="">公司新闻</a></li>
-					<li><a href="">行业动态</a></li>
-					<li><a href="">相关知识</a></li>
+					<li><a href="information.html">公司新闻</a></li>
+					<li><a href="information.html">行业动态</a></li>
+					<li><a href="information.html">相关知识</a></li>
 				</ul>
 			</li>
-			<li><a href="">联系我们</a></li>
+			<li><a href="contract.html">联系我们</a></li>
 		</ul>
 	</header>
 	<section class='banner'>
@@ -104,7 +104,7 @@
 	<section class="mbody">
 		<ul>
 			<li>
-				<a href="">
+				<a href="food -son.html">
 					<div class="zhezhao"></div>
 					<img src="img/food1.2.jpg" alt="">
 					<div class="tword">
@@ -114,7 +114,7 @@
 				</a>
 			</li>
 			<li>
-				<a href="">
+				<a href="food -son.html">
 					<div class="zhezhao"></div>
 					<img src="img/food1.2.jpg" alt="">
 					<div class="tword">
@@ -124,7 +124,7 @@
 				</a>
 			</li>
 			<li>
-				<a href="">
+				<a href="food -son.html">
 					<div class="zhezhao"></div>
 					<img src="img/food1.2.jpg" alt="">
 					<div class="tword">
@@ -134,7 +134,7 @@
 				</a>
 			</li>
 			<li>
-				<a href="">
+				<a href="food -son.html">
 					<div class="zhezhao"></div>
 					<img src="img/food1.2.jpg" alt="">
 					<div class="tword">
@@ -147,7 +147,7 @@
 		</ul>
 		<ul>
 			<li>
-				<a href="">
+				<a href="food -son.html">
 					<div class="zhezhao"></div>
 					<img src="img/food1.1.jpg" alt="">
 					<div class="tword">
@@ -157,7 +157,7 @@
 				</a>
 			</li>
 			<li>
-				<a href="">
+				<a href="food -son.html">
 					<div class="zhezhao"></div>
 					<img src="img/food1.1.jpg" alt="">
 					<div class="tword">
@@ -167,7 +167,7 @@
 				</a>
 			</li>
 			<li>
-				<a href="">
+				<a href="food -son.html">
 					<div class="zhezhao"></div>
 					<img src="img/food1.1.jpg" alt="">
 					<div class="tword">
@@ -177,7 +177,7 @@
 				</a>
 			</li>
 			<li>
-				<a href="">
+				<a href="food -son.html">
 					<div class="zhezhao"></div>
 					<img src="img/food1.1.jpg" alt="">
 					<div class="tword">
@@ -190,7 +190,7 @@
 		</ul>
 		<ul>
 			<li>
-				<a href="">
+				<a href="food -son.html">
 					<div class="zhezhao"></div>
 					<img src="img/food1.3.jpg" alt="">
 					<div class="tword">
@@ -200,7 +200,7 @@
 				</a>
 			</li>
 			<li>
-				<a href="">
+				<a href="food -son.html">
 					<div class="zhezhao"></div>
 					<img src="img/food1.3.jpg" alt="">
 					<div class="tword">
@@ -210,7 +210,7 @@
 				</a>
 			</li>
 			<li>
-				<a href="">
+				<a href="food -son.html">
 					<div class="zhezhao"></div>
 					<img src="img/food1.3.jpg" alt="">
 					<div class="tword">
@@ -223,7 +223,7 @@
 		</ul>
 		<ul>
 			<li>
-				<a href="">
+				<a href="food -son.html">
 					<div class="zhezhao"></div>
 					<img src="img/food1.4.jpg" alt="">
 					<div class="tword">
@@ -233,7 +233,7 @@
 				</a>
 			</li>
 			<li>
-				<a href="">
+				<a href="food -son.html">
 					<div class="zhezhao"></div>
 					<img src="img/food1.4.jpg" alt="">
 					<div class="tword">
@@ -243,7 +243,7 @@
 				</a>
 			</li>
 			<li>
-				<a href="">
+				<a href="food -son.html">
 					<div class="zhezhao"></div>
 					<img src="img/food1.4.jpg" alt="">
 					<div class="tword">
@@ -253,7 +253,7 @@
 				</a>
 			</li>
 			<li>
-				<a href="">
+				<a href="food -son.html">
 					<div class="zhezhao"></div>
 					<img src="img/food1.4.jpg" alt="">
 					<div class="tword">
@@ -266,7 +266,7 @@
 		</ul>
 		<ul>
 			<li>
-				<a href="">
+				<a href="food -son.html">
 					<div class="zhezhao"></div>
 					<img src="img/food1.5.jpg" alt="">
 					<div class="tword">
@@ -276,7 +276,7 @@
 				</a>
 			</li>
 			<li>
-				<a href="">
+				<a href="food -son.html">
 					<div class="zhezhao"></div>
 					<img src="img/food1.5.jpg" alt="">
 					<div class="tword">
@@ -286,7 +286,7 @@
 				</a>
 			</li>
 			<li>
-				<a href="">
+				<a href="food -son.html">
 					<div class="zhezhao"></div>
 					<img src="img/food1.5.jpg" alt="">
 					<div class="tword">
