--- a/index.html
+++ b/index.html
@@ -222,14 +222,12 @@
 						ABOUT US
 					</h4>
 					<p>
-						<span style='font-size:14px;color:#818181;'>成功客户催生的新锐产品</span>
+						
 					</p>
-					<p><span style='font-size:14px;color:#818181;'>　“乔一碗”品牌的创立者麦上食品机械公司是全国最早生产凉皮机和刀削面机的专业企业，从2001年成立以来，为数以千计的客户提供过专业的开店、办厂一体化服务，帮助他们取得了良好的经济效益。</span></p>
-					<p>
-						<span style='font-size:14px;color:#818181;'>
-							　　在公司购买食品机械的客户中，除从事食品生产批发外，开店的成功者也比比皆是——尽管他们的品牌各异，尽管他们缺乏标准化意识，尽管他们操作方法大相径庭，尽管他们的产品组合各有千秋，相同的是，他们都取得了超乎想象的经济效益，有的甚至开设多家连锁店，成为富甲一方的老板。
-						</span>
-					</p>
+					<span class='spanword' style='font-size:14px;color:#818181;'>成功客户催生的新锐产品
+					　“乔一碗”品牌的创立者麦上食品机械公司是全国最早生产凉皮机和刀削面机的专业企业，从2001年成立以来，为数以千计的客户提供过专业的开店、办厂一体化服务，帮助他们取得了良好的经济效益.
+					　　在公司购买食品机械的客户中，除从事食品生产批发外，开店的成功者也比比皆是——尽管他们的品牌各异，尽管他们缺乏标准化意识，尽管他们操作方法大相径庭，尽管他们的产品组合各有千秋，相同的是，他们都取得了超乎想象的经济效益，有的甚至开设多家连锁店，成为富甲一方的老板。
+					</span>
 				</div>
 				<div class="brandmore">
 					<a href="brand.html">查看更多</a>
