--- a/store.html
+++ b/store.html
@@ -18,52 +18,52 @@
 				<a href="">网站首页</a>
 			</li>
 			<li>
-				<a href="">品牌溯源</a>
+				<a href="brand.html">品牌溯源</a>
 			</li>
 			<li>
-				<a href="">金典美食</a>
+				<a href="food.html">金典美食</a>
 				<ul class="nitem">
-					<li><a href="">凉皮系列</a></li>
-					<li><a href="">面食系列</a></li>
-					<li><a href="">肉夹馍系列</a></li>
-					<li><a href="">米饭系列</a></li>
-					<li><a href="">凉菜系列</a></li>
+					<li><a href="food.html">凉皮系列</a></li>
+					<li><a href="food.html">面食系列</a></li>
+					<li><a href="food.html">肉夹馍系列</a></li>
+					<li><a href="food.html">米饭系列</a></li>
+					<li><a href="food.html">凉菜系列</a></li>
 				</ul>
 			</li>
 			<li>
-				<a href="">门店风采</a>
+				<a href="store.html">门店风采</a>
 			</li>
 			<li>
-				<a href="">移动电车</a>
+				<a href="car.html">移动电车</a>
 				<ul class="nitem">
-					<li><a href="">店车优势</a></li>
-					<li><a href="">经济效益</a></li>
+					<li><a href="car.html">店车优势</a></li>
+					<li><a href="car.html">经济效益</a></li>
 				</ul>
 			</li>
 			<li>
-				<a href="">加盟咨询</a>
+				<a href="join.html">加盟咨询</a>
 				<ul class="nitem">
-					<li><a href="">加盟须知</a></li>
-					<li><a href="">加盟政策</a></li>
-					<li><a href="">经济效益</a></li>
+					<li><a href="join.html">加盟须知</a></li>
+					<li><a href="join.html">加盟政策</a></li>
+					<li><a href="join.html">经济效益</a></li>
 				</ul>
 			</li>
 			<li>
-				<a href="">服务支持</a>
+				<a href="service.html">服务支持</a>
 				<ul class="nitem">
-					<li><a href="">开店服务</a></li>
-					<li><a href="">全程支持</a></li>
+					<li><a href="service.html">开店服务</a></li>
+					<li><a href="service.html">全程支持</a></li>
 				</ul>
 			</li>
 			<li>
-				<a href="">资讯中心</a>
+				<a href="information.html">资讯中心</a>
 				<ul class="nitem">
-					<li><a href="">公司新闻</a></li>
-					<li><a href="">行业动态</a></li>
-					<li><a href="">相关知识</a></li>
+					<li><a href="information.html">公司新闻</a></li>
+					<li><a href="information.html">行业动态</a></li>
+					<li><a href="information.html">相关知识</a></li>
 				</ul>
 			</li>
-			<li><a href="">联系我们</a></li>
+			<li><a href="contract.html">联系我们</a></li>
 		</ul>
 	</header>
 	<section class='banner'>
